rendering template  to Stout now works

--- a/templates/storyChapter.gohtml
+++ b/templates/storyChapter.gohtml
@@ -8,11 +8,11 @@
   </head>
   <body>
     <h1>{{.Title}}</h1>
-    {{range .Paragraphs}} <!-- ranges over the `story` list -->
+    {{range .Paragraph}} <!-- ranges over the `story` list -->
       <p>{{.}}</p> <!-- dumps all the data in that list element -->
     {{end}}
     <ul>
-      {{range .Options}} <!-- range over the data in options -->
+      {{range .Option}} <!-- range over the data in options -->
         <li><a href="/{{.Arc}}">{{.Text}}</a></li>  
       {{end}}
     </ul>
