completed webserver handling

--- a/templates/storyChapter.gohtml
+++ b/templates/storyChapter.gohtml
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>{{.Title}}</h1>
-    {{range .Paragraph}} <!-- ranges over the `story` list -->
+    {{range .Paragraph}} <!-- ranges over the 'story' list -->
       <p>{{.}}</p> <!-- dumps all the data in that list element -->
     {{end}}
     <ul>
